--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     
   </head>
   <body>
-    <!-- <div id="app"></div> -->
-    <i class="menu-icon isax isax-dcube"></i>
+    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
