--- a/index.html
+++ b/index.html
@@ -6,10 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/assets/vuesax.css">
     <title>Vite App</title>
-    
+    <link href="https://cdn.jsdelivr.net/npm/vuesax/dist/vuesax.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
+    <div>
+      <span>
+        <vs-icon icon="mood"></vs-icon>
+      </span>
+      <span>
+        <vs-icon icon="child_care"></vs-icon>
+      </span>
+      <span>
+        <vs-icon icon="pets"></vs-icon>
+      </span>
+      <span>
+        <vs-icon icon="android"></vs-icon>
+      </span>
+      <span>
+        <vs-icon icon="polymer"></vs-icon>
+      </span>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
