--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/assets/vuesax.css">
+    <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+
     <title>Vite App</title>
   </head>
   <body>
