--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/assets/vuesax.css">
     <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- Font  -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <!-- gotham  -->
+    <link href="https://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
+    <!-- gotham  -->
+    <!-- Font  -->
     <title>Vite App</title>
   </head>
   <body>
