Pagination and buttons updates

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <link href="https://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
     <!-- gotham  -->
     <!-- Font  -->
-    <title>Vite App</title>
+    <title>License Manager</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    
     <script>
       import fontawesome from "@fortawesome/fontawesome";
       import brands from "@fortawesome/fontawesome-free-brands";
