--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       import faSpinner from "@fortawesome/fontawesome-free-solid/faSpinner"; 
       import FontAwesomeIcon from "@fortawesome/vue-fontawesome";
 
-      fontawesome.library.add(brands, faSpinner);
+      // fontawesome.library.add(brands, faSpinner);
       // or .add(brands, solid) if you need the whole solid style icons library/module
 
       export default {
